# Ruker

./: README.md  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/com/example/ruker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/model-parameters/: model_metadata.h  model_variables.h
app/src/main/cpp/tflite-model/: tflite_learn_940506_3.h  tflite_learn_940506_3.tflite  tflite_learn_941068_3.h  tflite_learn_941068_3.tflite
app/src/main/java/com/example/ruker/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ruker/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
